--- a/GestionUtilisateur-FrontEnd-master3/package.json
+++ b/GestionUtilisateur-FrontEnd-master3/package.json
@@ -6,6 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "postbuild": "npm run deploy",
+    "predeploy":"rimraf ../BackEnd_SpringBoot/src/main/resources/static && mkdirp ../BackEnd_SpringBoot/src/main/resources/static",
+    "deploy":"copyfiles -f dist/** ../BackEnd_SpringBoot/src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
